// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendingDomainPage should render correctly 1`] = `
<Fragment>
  <CenteredLogo />
  <Panel
    title="Welcome to SparkPost!"
  >
    <form>
      <Panel.Section>
        <Stack>
          <p>
            Let's get you set up to send some email!
          </p>
          <p>
            Which domain will you be sending from?
             
            <ExternalLink
              to="https://www.sparkpost.com/docs/getting-started/getting-started-sparkpost/#preparing-your-from-address"
            >
              Learn more about sending domains
            </ExternalLink>
          </p>
          <Field
            component={[Function]}
            disabled={false}
            label="Domain Name"
            name="domain"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </Stack>
      </Panel.Section>
      <Panel.Section>
        <ButtonWrapper>
          <Button
            disabled={false}
            submit={true}
            variant="primary"
          >
            Add Domain
          </Button>
          <PageLink
            as={[Function]}
            to="/dashboard"
            variant="secondary"
          >
            Skip for now
          </PageLink>
        </ButtonWrapper>
      </Panel.Section>
    </form>
  </Panel>
</Fragment>
`;

exports[`SendingDomainPage should render submitting state correctly 1`] = `
<Fragment>
  <CenteredLogo />
  <Panel
    title="Welcome to SparkPost!"
  >
    <form>
      <Panel.Section>
        <Stack>
          <p>
            Let's get you set up to send some email!
          </p>
          <p>
            Which domain will you be sending from?
             
            <ExternalLink
              to="https://www.sparkpost.com/docs/getting-started/getting-started-sparkpost/#preparing-your-from-address"
            >
              Learn more about sending domains
            </ExternalLink>
          </p>
          <Field
            component={[Function]}
            disabled={true}
            label="Domain Name"
            name="domain"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </Stack>
      </Panel.Section>
      <Panel.Section>
        <ButtonWrapper>
          <Button
            disabled={true}
            submit={true}
            variant="primary"
          >
            Adding Domain...
          </Button>
          <PageLink
            as={[Function]}
            to="/dashboard"
            variant="secondary"
          >
            Skip for now
          </PageLink>
        </ButtonWrapper>
      </Panel.Section>
    </form>
  </Panel>
</Fragment>
`;
